@@ -1,3 +1,14 @@
+2014-06-10  Alexey Proskuryakov  <ap@apple.com>
+
+        Fix crashes on some plug-in tests.
+        https://bugs.webkit.org/show_bug.cgi?id=133691
+        <rdar://problem/17255836>
+
+        Reviewed by Anders Carlsson.
+
+        * PluginProcess/PluginControllerProxy.cpp: (WebKit::PluginControllerProxy::initialize):
+        Cannot use TemporaryChange here, because the object may go away before stack unwinds.
+
 2014-04-04  Alexey Proskuryakov  <ap@apple.com>
 
         Improve error checking in WebPageProxy::didReceiveEvent
